@@ -1,0 +1,22 @@
+<html>
+<script src="../editing.js"></script>
+<script>
+function onpastehandler(event) {
+    var e = document.getElementById('result');
+    e.innerHTML = "SUCCESS";
+}
+
+function test() {
+    execCopyCommand();
+    // Test to make sure that PasteAndMatchStyle fires the onpaste event.
+    execPasteAndMatchStyleCommand();
+    
+    if (window.layoutTestController)
+        layoutTestController.dumpAsText();
+}
+
+</script>
+<body onload='test()' onpaste='onpastehandler(event)'>
+<div id='result'>FAILURE</div>
+</body>
+</html>
