@@ -1,3 +1,15 @@
+2010-01-11  Tony Chang  <tony@chromium.org>
+
+        Reviewed by Eric Seidel.
+
+        Have "Paste and Match Style" fire the dom paste event.
+        https://bugs.webkit.org/show_bug.cgi?id=30639
+
+        Test: editing/execCommand/paste-and-match-style-event.html
+
+        * editing/Editor.cpp:
+        (WebCore::Editor::pasteAsPlainText):
+
 2010-01-10  Oliver Hunt  <oliver@apple.com>
 
         Reviewed by NOBODY (Build fix).
